[package]
name = "egui-multiselect"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/frankvgompel/egui-multiselect"
authors = ["Frank van Gompel"]
readme = "README.md"
description = "Multiselect widget for Egui"
keywords = ["graphics", "egui", "widget", "gui"]
categories = ["gui", "graphics"]
exclude = ["examples", "media"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.29.0"
egui-notify = { version = "0.15.0", git = "https://github.com/ItsEthra/egui-notify" }
egui-phosphor = "0.7.1"
