[package]
name = "egui-multiselect"
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/frankvgompel/egui-multiselect"
authors = ["Frank van Gompel"]
readme = "README.md"
description = "Multiselect widget for egui"
keywords = ["graphics", "egui", "widget", "gui"]
categories = ["gui", "graphics"]
exclude = ["examples", "media"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.31.0"
egui-notify = "0.19.0"
egui-phosphor = "0.9.0"
