[package]
name = "egui-multiselect"
version = "0.7.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/frankvgompel/egui-multiselect"
authors = ["Frank van Gompel"]
readme = "README.md"
description = "Multiselect widget for egui"
keywords = ["graphics", "egui", "widget", "gui"]
categories = ["gui", "graphics"]
exclude = ["examples", "media"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.33"
egui-notify = "0.21"
egui-phosphor = { git = "https://github.com/ItsEthra/egui-phosphor.git", branch = "egui-0.33", features = ["bold"]}
#egui-phosphor = "0.10.0"
